pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constAmend.pkl
amends "../../basic/constModifier.pkl"

constDyn {
  bar = 1
}
